stylesheet.less
/* ... */
.vertical-nav .widget.extendednavigation ul li.folder > ul > li .text:hover {
  background-image: none;
}


/* DROPDOWN MENU */

.vertical-nav .widget.extendednavigation li > ul {
    display: none
}

.vertical-nav .widget.extendednavigation li:hover > ul {
    display: block;
    position: absolute;
    min-width: 120px;
    background-color: @color-swatch7;
    z-index: 500;
    padding: 0;
    margin: -40px 0 0 168px;
    text-align: left;
}

.vertical-nav .widget.extendednavigation li:hover > ul > li {
    display: block;
    width: 100%;
    -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
    -moz-box-sizing: border-box; /* Firefox, other Gecko */
    box-sizing: border-box; /* Opera/IE 8+ */
}

.vertical-nav .widget.extendednavigation li:hover > ul > li > a {
    display: block;
    color: @color-swatch5;
    padding: 0;
}

/* EXTENDED NAVIGATION - INSIDE ZONE */

.main .widget.extendednavigation {
    max-width: 100%;
    width: 100%;
    float: none;
}

.main .widget.extendednavigation:before,
.main .widget.extendednavigation:after {
    content: " ";
    display: table;
}

.main .widget.extendednavigation:after {
    clear: both
}

.main .widget.extendednavigation {
    *zoom: 1
}

/* ===============================
   FEATURE
   =============================== */

.widget.feature .feature-bgimg {
  height: 650px; 
  background-position: center center;
  margin-bottom: 30px;
 }

.widget.feature .content {
  height: 500px;
  vertical-align: bottom;
  text-align: center;
}

.widget.feature .content .spare {
  width: 960px;
  margin: 0 auto;
}

/* FEATURE TITLE */

.widget.feature h2 {
  width: 80%;
  margin: 0 auto;
  font-family:@font-swatch8-font-family;
  font-size:@font-swatch8-font-size;
  font-weight: @font-swatch8-font-weight;
  line-height:@font-swatch8-line-height;
  color: @font-swatch8-color;
  letter-spacing: @font-swatch8-letter-spacing;
  background-color: @color-swatch1;
  padding: 10px 20px 5px;
}

/* FEATURE STRAPLINE */

.widget.feature h3 {
  width: 80%;
  margin: 0 auto;
  font-family:@font-swatch9-font-family;
  font-size: @font-swatch9-font-size;
  font-weight: @font-swatch9-font-weight;
  line-height:bkscale(@font-swatch9-line-height,0.8);
  color: @font-swatch9-color;
  letter-spacing: @font-swatch9-letter-spacing;
  background-color: @color-swatch1;
  padding: 0 20px;
}

/* FEATURE BUTTON */

.widget.feature .feature-btn {
  display: block;
  position: absolute;
  top: 30%;
  left: 0;
  right: 0;
}

.widget.feature button {
  width: 200px;
  height: 200px;
  padding: 40px;
  border: 3px solid @color-swatch1;
     -webkit-border-radius: 200px;
    -moz-border-radius: 200px;
    border-radius: 200px;
  font-family: @font-swatch7-font-family;
  font-weight:@font-swatch7-font-weight;
  font-size: @font-swatch7-font-size;
  line-height: @font-swatch7-line-height;
  background-color: hsla(hue(@color-swatch4), saturation(@color-swatch4), lightness(lighten(@color-swatch4,10%)), 0.8);
  color: @font-swatch7-color;
  text-decoration: none;
  letter-spacing: 1px;
  margin: 0;
}

.widget.feature button:hover 
{
  background-color: hsla(hue(@color-swatch4), saturation(@color-swatch4), lightness(lighten(@color-swatch4,10%)), 0.9);
  color: @font-swatch7-color;
  cursor: pointer;
  padding: 40px;
}

.widget.feature button.btn.justifyleft
{
    text-align: left;
}

.widget.feature button.btn.justifycenter
{
    text-align: center;
}

.widget.feature button.btn.justifyright
{
    text-align: right;
}

.widget.feature button.btn.justifyfull
{
    text-align: justify;
}

.widget.feature button.btn.italic {
    font-style: italic;
}

.widget.feature button.btn.bold {
    font-weight: bold;
}

.widget.feature button span {
    vertical-align: center;
}

.widget.feature button i {
    margin-right: 5px;
}

/* ===============================
   FEATURE LAYOUTS
   =============================== */

/* LEFT ALIGN */

.widget.feature.align-left .content {
    width: 100%;
    text-align: left;
}

/* CENTER ALIGN */

.widget.feature.align-center .content {
    width: 100%;
    text-align: center;
}

/* RIGHT ALIGN */

.widget.feature.align-right .content {
    width: 100%;
    text-align: right;
}




/* ===============================
   CONTENT
   =============================== */

.widget.content {
    padding: 0;
    overflow: hidden;
}

.widget.content span.expand {
    font-family: @font-swatch3-font-family;
    background-color: @color-swatch3;
    color: @font-swatch7-color;
    font-size: @font-swatch5-font-size;
    padding: 4px 8px;
    margin: 4px 0;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    border-radius: 4px;
    cursor: pointer;
    display: inline-block;
}

.widget.content span.expand:hover,
.widget.content span.expand:focus {
    cursor: pointer;
    background-color: darken(@color-swatch3,5%);
}

/* ===============================
   IMAGE WIDGET
   =============================== */

.widget.image img
{
    display:block;
    max-width: 100%;
    border: 0;
    border-width: 0;
}

.widget.image span.image-title {
    display: block;
    margin:10px 0 0;
    font-family: @font-swatch4-font-family;
    font-weight: @font-swatch4-font-weight;
    font-size: @font-swatch4-font-size;
    color:  @font-swatch4-color;
    line-height: @font-swatch4-line-height;
    text-decoration: none;
}

.widget.image a:hover {
  text-decoration: none;
  cursor: pointer;
}

.widget.image span.image-title:hover {
  color: lighten(@font-swatch4-color,30%);
}

.widget.image span.image-description {
    display: block;
    margin:0 0 10px;
    font-family: @font-swatch5-font-family;
    font-weight: @font-swatch5-font-weight;
    font-size: @font-swatch5-font-size;
    line-height: @font-swatch5-line-height;
    color: @font-swatch5-color;
}
/* ... */

